--- a/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
@@ -1,3 +1,5 @@
+{{ leftMenuWidth }}
+{{ logo }}
 <div class="logo">
   <div class="logoContainer">
     <img *ngIf="!isMenuCollapsed" src="assets/images/logo-inverse.png" alt="" />
