--- a/src/app/components/layout/Topbar/IssuesHistory/issues-history.component.html
+++ b/src/app/components/layout/Topbar/IssuesHistory/issues-history.component.html
@@ -2,7 +2,7 @@
   <a nz-dropdown class="dropdown">
     <i class="icon fe fe-folder"></i>
     <span class="d-none d-xl-inline">
-      Issues History
+      {{ 'topBar.issuesHistory' | translate }}
     </span>
   </a>
   <ul nz-menu>
