--- a/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
+++ b/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
@@ -2,7 +2,7 @@
   <a nz-dropdown class="dropdown">
     <i class="icon fe fe-database"></i>
     <span class="d-none d-xl-inline">
-      Project Management
+      {{ 'topBar.projectManagement' | translate }}
     </span>
   </a>
   <ul nz-menu>
