--- a/src/app/components/layout/Topbar/UserMenu/user-menu.component.html
+++ b/src/app/components/layout/Topbar/UserMenu/user-menu.component.html
@@ -34,7 +34,7 @@
       <li nz-menu-divider></li>
       <li nz-menu-item>
         <a href="javascript: void(0);">
-          <i class="menuIcon fe fe-user"></i>
+          <i class="fe fe-user mr-2"></i>
           {{ 'topBar.profileMenu.editProfile' | translate }}:
         </a>
       </li>
@@ -42,7 +42,7 @@
       <li nz-menu-item>
 
         <a href="javascript: void(0);" (click)="logout()">
-          <i class="menuIcon fe fe-log-out"></i>
+          <i class="fe fe-log-out mr-2"></i>
           {{ 'topBar.profileMenu.logout' | translate }}:
         </a>
       </li>
