--- a/src/app/components/kit-vendors/perfect-scrollbar/style.scss
+++ b/src/app/components/kit-vendors/perfect-scrollbar/style.scss
@@ -52,3 +52,14 @@ perfect-scrollbar > .ps.ps--active-x > .ps__rail-x:hover,
 perfect-scrollbar > .ps.ps--active-x > .ps__rail-x.ps--clicking {
   height: 10px !important;
 }
+
+// dark theme
+body.kit__dark {
+  .ps__thumb-y {
+    background: #32304b !important;
+  }
+
+  .ps__thumb-x {
+    background: #32304b !important;
+  }
+}
