--- a/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
@@ -1,67 +1,73 @@
-{{ leftMenuWidth }}
-{{ logo }}
-<div class="logo">
-  <div class="logoContainer">
-    <img *ngIf="!isMenuCollapsed" src="assets/images/logo-inverse.png" alt="" />
-    <img *ngIf="isMenuCollapsed" src="assets/images/logo-inverse-mobile.png" alt="" />
-  </div>
-</div>
-<div [ngClass]="isLightTheme ? 'navigation light' : 'navigation'">
-  <perfect-scrollbar [ngClass]="isMobileView ? 'scrollbarMobile' : 'scrollbarDesktop'">
-    <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'inline'" [nzInlineCollapsed]="isMenuCollapsed">
-      <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated, level: 0}"></ng-container>
-      <ng-template #menuTpl let-menuDataActivated let-level="level">
-        <ng-container *ngFor="let item of menuDataActivated">
-          <ng-template #tooltipTpl>
-            {{ item.title }}
-            <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
-          </ng-template>
-          <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'" nz-tooltip nzPlacement="right"
-            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
-            <span>
-              <span class="title">{{item.title}}</span>
-              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-            </span>
-          </li>
-          <li nz-menu-item *ngIf="item.url && item.target" nz-tooltip nzPlacement="right"
-            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
-            <a href={{item.url}} target={{item.target}}>
-              <span class="title">{{item.title}}</span>
-              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-              <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
-            </a>
-          </li>
-          <li nz-menu-divider *ngIf="item.divider"></li>
-          <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}}
-            [nzSelected]="item.selected" [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
-            [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
-            <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 24}">
-              <span class="title">{{item.title}}</span>
-              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-              <span *ngIf="item.pro" class="badge badge-primary badge-collapsed-hidden ml-2">PRO</span>
-            </span>
-          </li>
-          <li nz-submenu *ngIf="item.children" [nzOpen]="item.open && !isMenuCollapsed">
-            <span title [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 24}">
-              <span class="title">{{item.title}}</span>
-              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-            </span>
-            <ul>
-              <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}">
-              </ng-container>
-            </ul>
-          </li>
-        </ng-container>
-      </ng-template>
-    </ul>
-    <div class="buyPro">
-      <p>
-        <strong>More components, more styles, more themes, and premium support!</strong>
-      </p>
-      <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
-        rel="noopener noreferrer" class="btn btn-sm btn-danger">
-        Buy Bundle
-      </a>
+<nz-sider nzCollapsible [nzWidth]="leftMenuWidth" [nzCollapsible]="!isMobileView"
+  [(nzCollapsed)]="isMenuCollapsed && !isMobileView" (nzCollapsedChange)="onCollapse($event)" [ngClass]="{
+  menu: true,
+  white: menuColor === 'white',
+  gray: menuColor === 'gray',
+  dark: menuColor === 'dark',
+  unfixed: isMenuUnfixed,
+  shadow: isMenuShadow && !isMobileView
+}">
+  <div class="menuOuter" [ngStyle]="{
+    width: isMenuCollapsed && !isMobileView ? '80px' : leftMenuWidth + 'px',
+    height: isMobileView || isMenuUnfixed ? 'calc(100% - 64px)' : 'calc(100% - 110px)'
+  }">
+    <div class="logoContainer">
+      <div class="logo">
+        <img src="assets/images/logo.svg" class="mr-2" alt="Clean UI" />
+        <div class="name">{{ logo }}</div>
+        <div *ngIf="logo === 'Clean UI Pro'" class="descr">Angular</div>
+      </div>
     </div>
-  </perfect-scrollbar>
-</div>
+    <perfect-scrollbar>
+      <ul nz-menu class="navigation" [nzInlineIndent]="15" [nzMode]="'inline'"
+        [nzInlineCollapsed]="isMenuCollapsed && !isMobileView">
+        <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated, level: 0}"></ng-container>
+        <ng-template #menuTpl let-menuDataActivated let-level="level">
+          <ng-container *ngFor="let item of menuDataActivated">
+            <ng-template #tooltipTpl>
+              {{ item.title }}
+            </ng-template>
+            <!-- group title item -->
+            <li nz-menu-group [nzTitle]="item.title" *ngIf="item.category"></li>
+            <!-- disabled item -->
+            <li nz-menu-item *ngIf="item.disabled" [nzSelected]="item.selected" [nzDisabled]="true" nz-tooltip
+              nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+              <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                <span class="title">{{item.title}}</span>
+                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              </span>
+            </li>
+            <!-- main item -->
+            <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}} [nzSelected]="item.selected"
+              [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
+              [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+              <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                <span class="title">{{item.title}}</span>
+                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              </span>
+            </li>
+            <!-- submenu item with recursive template -->
+            <li nz-submenu *ngIf="item.children" [nzOpen]="item.open && !isMenuCollapsed">
+              <span title [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                <span class="title">{{item.title}}</span>
+                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+              </span>
+              <ul>
+                <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}">
+                </ng-container>
+              </ul>
+            </li>
+          </ng-container>
+        </ng-template>
+      </ul>
+      <div class="banner">
+        <p>More components, more style, more themes, and premium support!</p>
+        <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
+          rel="noopener noreferrer" class="btn btn-sm btn-success btn-rounded px-3">Buy Bundle</a>
+      </div>
+    </perfect-scrollbar>
+  </div>
+</nz-sider>
