--- a/src/app/components/layout/Menu/MenuLeft/menu-left.component.scss
+++ b/src/app/components/layout/Menu/MenuLeft/menu-left.component.scss
@@ -1,320 +1,395 @@
 @import 'src/app/components/kit-core/mixins.scss';
 
-.logo {
-  height: 64px;
-  background: $black;
-  overflow: hidden;
+:host {
+  height: 100%;
+  width: 100%;
 }
 
-.logoContainer {
-  height: 64px;
-  padding: 13px 20px 15px 22px;
-  img {
-    height: 36px;
-  }
-}
-
-.icon {
-  text-align: center;
-  position: absolute;
-  right: 20px;
-  width: 20px;
-  top: 12px;
-  margin: 0 !important;
-  line-height: 1 !important;
+/////////////////////////////////////////////////////////////////////////////////////////
+/* MENU COMPONENT */
+.menu {
+  background: $white !important;
   color: $text;
-}
+  transition: none;
+  display: block;
+  min-height: 100%;
 
-.navigation {
-  &.light {
-    &:before,
-    &:after {
-      content: '';
+  .menuOuter {
+    position: fixed;
+    height: 100%;
+    width: inherit;
+    max-width: inherit;
+  }
+
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* LOGO */
+  .logoContainer {
+    height: 64px;
+    display: flex;
+    align-items: center;
+    padding: 0 rem(15) 0 rem(28);
+
+    .logo {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: rem(24);
+      white-space: nowrap;
+      width: 100%;
+    }
+    .name {
+      font-size: rem(20);
+      font-weight: 700;
+      color: $black;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      max-width: 90%;
       display: block;
-      width: 1px;
-      height: 100%;
-      background: $gray-4;
-      opacity: 0.4;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
     }
-
-    &:after {
-      left: auto;
-      right: 0;
-    }
-
-    @at-root {
-      ::ng-deep {
-        .settings__menuShadow .navigation.light {
-          &:before,
-          &:after {
-            display: none;
-          }
-        }
-      }
-
-      @media (max-width: 1435px) {
-        ::ng-deep {
-          .settings__fixedWidth .navigation.light {
-            &:before {
-              display: none;
-            }
-          }
-        }
-      }
+    .descr {
+      margin-left: rem(11);
+      padding-left: rem(11);
+      height: rem(38);
+      line-height: rem(38);
+      border-left: 1px solid $gray-2;
+      font-size: rem(14);
     }
   }
 
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* ICON */
+  .icon {
+    text-align: center;
+    position: absolute;
+    right: 14px;
+    width: 20px;
+    top: 11px;
+    margin: 0 !important;
+    line-height: 1 !important;
+    color: $gray-5;
+    font-size: rem(17);
+    transition: color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* COLLAPSE TRIGGER BUTTON */
   ::ng-deep {
-    .ant-menu-root {
-      padding: rem(15) 0 rem(30) !important;
-      transition: all 0.3s !important;
-      border: none;
-      > .ant-dropdown-menu-item-divider {
-        margin: 0 23px !important;
-        transition: all 0.3s !important;
-      }
-
-      &.ant-menu-inline-collapsed {
-        > .ant-menu-item {
-          > span {
-            .badge {
-              display: none;
-            }
-          }
-        }
-      }
+    .ant-layout-sider-trigger {
+      background: $gray-1;
+      color: $text;
+      transition: none;
     }
 
-    .ant-menu-inline,
-    .ant-menu-vertical,
-    .ant-menu-vertical-left {
-      border-right: none;
+    .ant-menu-inline-collapsed + .banner {
+      display: none;
     }
+  }
 
-    .ant-menu-inline-collapsed {
-      .title {
-        display: none;
-      }
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* ANTD MENU CUSTOMIZATION */
+  .navigation {
+    padding: 0 rem(15);
+    transition: background 0s, width 0.0001s !important; // collapsed state ant-menu fix
+    background: transparent;
+    border-right: none;
+    color: $text;
 
-      .ant-menu-submenu {
-        > .ant-menu-submenu-title {
-          &:hover {
-            .ant-menu-submenu-arrow {
-              opacity: 1;
-            }
-          }
-          .ant-menu-submenu-arrow {
-            display: block;
-            opacity: 0.45;
-            top: 48%;
-            right: 14px;
-          }
-        }
-      }
-
-      .icon {
-        right: 30px;
-      }
-    }
-
-    .ant-menu-submenu-inline {
-      > .ant-menu-submenu-title {
-        .ant-menu-submenu-arrow {
-          right: 50px;
-        }
-      }
-    }
-
-    .ant-menu-light {
-      .icon {
-        color: $gray-4;
-        @include transition-slow();
+    ::ng-deep {
+      .ant-menu-submenu > .ant-menu {
+        background: transparent;
       }
 
       .ant-menu-submenu-arrow {
-        opacity: 0.7;
+        opacity: 0.55;
       }
 
-      .ant-menu-item:after {
-        right: auto;
-        left: 0;
-      }
-
-      ::ng-deep {
-        .ant-menu-item,
-        .ant-menu-submenu {
-          &:hover {
-            .icon {
-              color: $text;
-            }
-          }
-        }
-      }
-
-      .ant-menu-item,
-      .ant-menu-submenu-title {
+      .ant-menu-inline .ant-menu-item,
+      .ant-menu-inline .ant-menu-submenu-title {
         width: 100%;
       }
-    }
-    .ant-menu-dark {
-      color: $gray-4;
 
-      .ant-dropdown-menu-item-divider {
-        opacity: 0.2;
+      .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow {
+        right: 40px;
       }
 
-      .ant-menu-submenu-inline {
-        > .ant-menu-submenu-title {
-          &:hover {
-            .ant-menu-submenu-arrow {
-              opacity: 1;
-              &:before,
-              &:after {
-                background: $white !important;
-              }
-            }
-          }
+      .ant-menu-item-group-title {
+        color: $gray-4 !important;
+        font-size: rem(12);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        transition: none;
+      }
+
+      .ant-menu-submenu-title {
+        margin-bottom: 0 !important;
+        transition: none !important;
+        background: transparent !important;
+        color: $text;
+
+        &:hover {
+          color: $primary;
         }
       }
 
-      .ant-menu-sub {
-        color: $gray-4;
-        &.ant-menu-inline {
-          box-shadow: none !important;
-          transition: all 0.3s;
-        }
+      .ant-menu-submenu {
+        border-radius: 5px;
       }
 
       .ant-menu-item {
-        color: $gray-4;
-
-        > a,
-        span:not(.badge) {
-          color: $gray-4;
-          transition: color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+        margin-bottom: 4px !important;
+        border-radius: 5px;
+        outline: none;
+        transition: background 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) !important;
+        > span {
+          color: $text;
         }
 
-        &:hover {
-          > a,
-          span {
-            color: $white;
+        > a {
+          color: $text;
+
+          &:hover {
+            color: $primary;
 
             .icon {
-              color: $white !important;
+              color: $primary;
             }
           }
         }
       }
 
+      .ant-menu-submenu-selected {
+        :global(.ant-menu-submenu-title),
+        .icon {
+          color: $primary;
+        }
+      }
+
+      .ant-menu-submenu-active {
+        .icon {
+          color: $primary;
+        }
+      }
+
+      .ant-menu-submenu-open,
+      .ant-menu-submenu-active,
+      .ant-menu-item-active {
+        background: $gray-2 !important;
+      }
+
       .ant-menu-item-selected {
+        background: $primary !important;
+
         > a,
-        span {
+        > span {
           color: $white !important;
 
           .icon {
             color: $white !important;
           }
         }
-      }
 
-      .ant-menu-submenu:hover,
-      .ant-menu-submenu-selected,
-      .ant-menu-submenu-open {
-        .icon {
-          opacity: 1;
-          color: $white !important;
+        &:after {
+          display: none;
         }
       }
 
-      .ant-menu-submenu-active {
-        .icon {
-          color: $blue !important;
+      .ant-menu-item-active {
+        > span {
+          color: $primary;
         }
       }
 
-      .ant-menu-inline.ant-menu-sub {
-        box-shadow: none !important;
-        transition: all 0.3s;
-      }
-
-      .ant-menu-item:after {
-        border-right: 3px solid $white !important;
-        right: auto;
-        left: 0;
+      .ant-menu-item-disabled {
+        > span {
+          color: $gray-4;
+        }
       }
     }
   }
+
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* COLLAPSED STYLES */
+  &.ant-layout-sider-collapsed {
+    ::ng-deep {
+      @at-root {
+        .ant-menu-inline-collapsed-tooltip .icon {
+          display: none;
+        }
+      }
+
+      .badge {
+        position: absolute;
+        z-index: 1;
+        top: 3px;
+        right: 3px;
+      }
+
+      .title,
+      .name,
+      .line,
+      .descr {
+        display: none !important;
+      }
+
+      .ant-menu-item-group {
+        position: relative;
+        &:after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0;
+          top: 50%;
+          background: $border;
+        }
+      }
+
+      .ant-menu-item-group-title {
+        visibility: hidden;
+      }
+
+      .ant-menu-inline-collapsed-tooltip .icon {
+        display: none;
+      }
+
+      .ant-menu-item,
+      .ant-menu-submenu-title {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+
+        .icon {
+          right: rem(15);
+        }
+      }
+    }
+  }
+
+  /////////////////////////////////////////////////////////////////////////////////////////
+  /* BANNER COMPONENT */
+  .banner {
+    padding: rem(20);
+    background: $gray-1;
+    border-radius: 3px;
+    margin: rem(20);
+    overflow: hidden;
+    border: 1px solid $border;
+  }
 }
 
-.scrollbarDesktop {
-  height: calc(100vh - 112px) !important;
+/////////////////////////////////////////////////////////////////////////////////////////
+/* SETTINGS */
+.unfixed {
+  .menuOuter {
+    position: relative;
+  }
 }
 
-.scrollbarMobile {
-  height: calc(100vh - 64px) !important;
+.shadow {
+  box-shadow: 0 0 100px -30px rgba(57, 55, 73, 0.3);
+  z-index: 1;
 }
 
-.buyPro {
-  padding: rem(20);
-  background: #e4e9f0;
-  border-radius: 3px;
-  text-align: center;
-  margin: 0 rem(20) rem(20);
-  overflow: hidden;
+/////////////////////////////////////////////////////////////////////////////////////////
+/* GRAY THEME */
+.gray {
+  background: $gray-1 !important;
 }
 
-::ng-deep {
-  .ant-menu-inline-collapsed + .buyPro {
-    display: none;
+/////////////////////////////////////////////////////////////////////////////////////////
+/* DARK THEME */
+.dark {
+  color: $dark-gray-2;
+  background: $dark-gray-6 !important;
+
+  .icon {
+    color: $dark-gray-2;
   }
 
-  .ps__thumb-y {
-    width: 4px !important;
-    background: #c5cdd2 !important;
+  .logoContainer {
+    .name {
+      color: $white;
+    }
+    .descr {
+      color: $dark-gray-2;
+      border-left: 1px solid $dark-gray-4;
+    }
   }
 
-  .ps__thumb-x {
-    height: 4px !important;
-    background: #c5cdd2 !important;
+  .banner {
+    background: $dark-gray-4;
+    border: 1px solid $dark-gray-4;
   }
 
-  perfect-scrollbar > .ps.ps--scrolling-y > .ps__rail-y,
-  perfect-scrollbar > .ps.ps--scrolling-x > .ps__rail-x {
-    background: none !important;
+  ::ng-deep {
+    .ant-layout-sider-trigger {
+      background: lighten($dark-gray-6, 5%);
+    }
   }
 
-  .ps .ps__rail-x:hover,
-  .ps .ps__rail-y:hover,
-  .ps .ps__rail-x:focus,
-  .ps .ps__rail-y:focus,
-  .ps .ps__rail-x.ps--clicking,
-  .ps .ps__rail-y.ps--clicking {
-    background: none !important;
+  .navigation {
+    ::ng-deep {
+      .ant-menu-item-group-title {
+        color: darken($dark-gray-3, 10%) !important;
+      }
+
+      .ant-menu-submenu-title {
+        color: $dark-gray-2;
+
+        &:hover {
+          color: $primary;
+        }
+      }
+
+      .ant-menu-item {
+        > span {
+          color: $dark-gray-2;
+        }
+        > a,
+        > span {
+          color: $dark-gray-2;
+
+          &:hover {
+            color: $primary;
+
+            .icon {
+              color: $primary;
+            }
+          }
+        }
+      }
+
+      .ant-menu-submenu-open,
+      .ant-menu-submenu-active,
+      .ant-menu-item-active {
+        background: $dark-gray-4 !important;
+      }
+
+      .ant-menu-item-active {
+        > span {
+          color: $primary;
+        }
+        .ant-menu-item-selected {
+          background: $primary !important;
+        }
+      }
+
+      .ant-menu-item-disabled {
+        > span {
+          color: $dark-gray-3;
+        }
+      }
+    }
   }
 
-  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y:hover,
-  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y.ps--clicking {
-    width: 10px !important;
-  }
-
-  .ps__rail-y:hover > .ps__thumb-y,
-  .ps__rail-y:focus > .ps__thumb-y,
-  .ps__rail-y.ps--clicking .ps__thumb-y {
-    width: 4px !important;
-  }
-
-  .ps__rail-x:hover > .ps__thumb-x,
-  .ps__rail-x:focus > .ps__thumb-x,
-  .ps__rail-x.ps--clicking .ps__thumb-x {
-    height: 4px !important;
-  }
-
-  perfect-scrollbar > .ps.ps--active-x > .ps__rail-x:hover,
-  perfect-scrollbar > .ps.ps--active-x > .ps__rail-x.ps--clicking {
-    height: 10px !important;
+  &.ant-layout-sider-collapsed {
+    ::ng-deep {
+      .ant-menu-item-group {
+        &:after {
+          background: $dark-gray-4;
+        }
+      }
+    }
   }
 }
