--- a/src/app/components/layout/Topbar/Search/search.component.html
+++ b/src/app/components/layout/Topbar/Search/search.component.html
@@ -4,7 +4,7 @@
       style="width: 200px" />
   </nz-input-group>
   <ng-template #prefixIconSearch>
-    <i nz-icon type="search" class="extInputIcon" style="color: rgba(0,0,0,.25)"></i>
+    <i nz-icon nzType="search" class="extInputIcon" style="color: rgba(0,0,0,.25)"></i>
   </ng-template>
   <div class="livesearch" [ngClass]="{'livesearchVisible': showSearch}">
     <button class="close" type="button" (click)="setHidden()">
