--- a/src/app/pages/ecommerce/cart/cart.component.html
+++ b/src/app/pages/ecommerce/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="air__utils__heading">
-    <h5>Ecommerce: Cart</h5>
+  <div class="cui__utils__heading">
+    <strong>Ecommerce: Cart</strong>
   </div>
   <div class="card">
     <div class="card-body">
