--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -55,10 +55,10 @@
   <div class="col-lg-12">
     <div class="card">
       <div class="card-header">
-        <div class="utils__title">
+        <div class="cui__utils__heading mb-0">
           <strong>Recently Referrals</strong>
         </div>
-        <div class="utils__titleDescription">
+        <div class=" text-muted">
           Block with important Recently Referrals information
         </div>
       </div>
