--- a/src/app/pages/ecommerce/orders/orders.component.html
+++ b/src/app/pages/ecommerce/orders/orders.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="air__utils__heading">
-    <h5>Ecommerce: Orders</h5>
+  <div class="cui__utils__heading">
+    <strong>Ecommerce: Orders</strong>
   </div>
   <div class="card">
     <div class="card-header card-header-flex">
@@ -16,110 +16,79 @@
     <div class="card-body">
       <nz-table #orderTable [nzData]="listOfDisplayData" class="air__utils__scrollTable mb-4">
         <thead>
-        <tr>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.id"
-            (nzSortChange)="sort('id', $event)"
-          >
-            ID
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.date"
-            (nzSortChange)="sort('date', $event)"
-          >
-            Purchase Date
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.customer"
-            (nzSortChange)="sort('customer', $event)"
-          >
-            Customer
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.total"
-            (nzSortChange)="sort('total', $event)"
-          >
-            Grand Total
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.tax"
-            (nzSortChange)="sort('tax', $event)"
-          >
-            Tax
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.shipping"
-            (nzSortChange)="sort('shipping', $event)"
-          >
-            Shipping
-          </th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.quantity"
-            (nzSortChange)="sort('quantity', $event)"
-          >
-            Quantity</th>
-          <th
-            nzShowSort
-            [(nzSort)]="mapOfSort.status"
-            (nzSortChange)="sort('status', $event)"
-          >
-            Status
-          </th>
-          <th>Action</th>
-        </tr>
+          <tr>
+            <th nzShowSort [(nzSort)]="mapOfSort.id" (nzSortChange)="sort('id', $event)">
+              ID
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.date" (nzSortChange)="sort('date', $event)">
+              Purchase Date
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.customer" (nzSortChange)="sort('customer', $event)">
+              Customer
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.total" (nzSortChange)="sort('total', $event)">
+              Grand Total
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.tax" (nzSortChange)="sort('tax', $event)">
+              Tax
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.shipping" (nzSortChange)="sort('shipping', $event)">
+              Shipping
+            </th>
+            <th nzShowSort [(nzSort)]="mapOfSort.quantity" (nzSortChange)="sort('quantity', $event)">
+              Quantity</th>
+            <th nzShowSort [(nzSort)]="mapOfSort.status" (nzSortChange)="sort('status', $event)">
+              Status
+            </th>
+            <th>Action</th>
+          </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let item of orderTable.data">
-          <td>
-            <a href="javascript: void(0);" class="btn btn-sm btn-light">
-              #{{item.id}}
-            </a>
-          </td>
-          <td>
-            {{item.date}}
-          </td>
-          <td>
-            <a href="javascript: void(0);" class="btn btn-sm btn-light">
-              {{item.customer}}
-            </a>
-          </td>
-          <td>
-            ${{item.total}}
-          </td>
-          <td>
-            ${{item.tax}}
-          </td>
-          <td>
-            {{item.shipping}}
-          </td>
-          <td>
-            {{item.quantity}}
-          </td>
-          <td>
-          <span [ngClass]="[item.status === 'Processing' ? 'font-size-12 badge badge-primary' : 'font-size-12 badge badge-default']">
-            {{item.status}}
-          </span>
-          </td>
-          <td>
-            <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2">
-              <i class="fe fe-edit mr-2"></i>
-              View
-            </a>
-            <a href="javascript: void(0);" class="btn btn-sm btn-light">
-              <small>
-                <i class="fe fe-trash mr-2"></i>
-              </small>
-              Remove
-            </a>
-          </td>
-        </tr>
+          <tr *ngFor="let item of orderTable.data">
+            <td>
+              <a href="javascript: void(0);" class="btn btn-sm btn-light">
+                #{{item.id}}
+              </a>
+            </td>
+            <td>
+              {{item.date}}
+            </td>
+            <td>
+              <a href="javascript: void(0);" class="btn btn-sm btn-light">
+                {{item.customer}}
+              </a>
+            </td>
+            <td>
+              ${{item.total}}
+            </td>
+            <td>
+              ${{item.tax}}
+            </td>
+            <td>
+              {{item.shipping}}
+            </td>
+            <td>
+              {{item.quantity}}
+            </td>
+            <td>
+              <span
+                [ngClass]="[item.status === 'Processing' ? 'font-size-12 badge badge-primary' : 'font-size-12 badge badge-default']">
+                {{item.status}}
+              </span>
+            </td>
+            <td>
+              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2">
+                <i class="fe fe-edit mr-2"></i>
+                View
+              </a>
+              <a href="javascript: void(0);" class="btn btn-sm btn-light">
+                <small>
+                  <i class="fe fe-trash mr-2"></i>
+                </small>
+                Remove
+              </a>
+            </td>
+          </tr>
         </tbody>
       </nz-table>
     </div>
