--- a/src/app/pages/ecommerce/product-details/product-details.component.html
+++ b/src/app/pages/ecommerce/product-details/product-details.component.html
@@ -1,30 +1,23 @@
 <div>
-  <div class="air__utils__heading">
-    <h5>Ecommerce: Product Details</h5>
+  <div class="cui__utils__heading">
+    <strong>Ecommerce: Product Details</strong>
   </div>
   <div class="card overflow-hidden">
     <div class="new">New</div>
     <div class="card-body">
       <div class="row">
         <div class="col-lg-4">
-          <a
-            class="favorite"
-            [ngClass]="[isFavorite ? 'text-dark' : 'text-gray-3']"
-            [routerLink]=""
-            (click)="setFavorite()"
-          >
+          <a class="favorite" [ngClass]="[isFavorite ? 'text-dark' : 'text-gray-3']" [routerLink]=""
+            (click)="setFavorite()">
             <i class="fe fe-heart font-size-21"></i>
           </a>
           <div class="image height-250 mb-3">
             <img [src]="images[activeImgIndex]" alt="Product" />
           </div>
           <div class="d-flex flex-wrap mb-3">
-            <a
-              *ngFor="let image of images; let i = index"
-              (click)="setImage(i)"
+            <a *ngFor="let image of images; let i = index" (click)="setImage(i)"
               [ngClass]="[i === activeImgIndex ? 'border-primary' : '', 'thumb']"
-              class="width-100 height-100 border mr-2 mb-2"
-            >
+              class="width-100 height-100 border mr-2 mb-2">
               <img [src]="image" alt="Product" />
             </a>
           </div>
@@ -37,8 +30,8 @@
           <div class="pb-3 mb-4 border-bottom">
             <a href="javascript:void(0);" class="text-blue font-size-18">
               TP-Link AC1750 Smart WiFi Router - Dual
-              <br/>Band Gigabit Wireless Internet Routers for
-              <br/>Home
+              <br />Band Gigabit Wireless Internet Routers for
+              <br />Home
             </a>
           </div>
           <div class="mb-4 width-300">
@@ -49,16 +42,14 @@
               <nz-option nzValue="Blue" nzLabel="Blue"></nz-option>
             </nz-select>
           </div>
-          <a
-            href="javascript: void(0);"
-            class="width-200 btn btn-success btn-with-addon mr-auto mb-3 text-nowrap d-none d-md-block"
-          >
+          <a href="javascript: void(0);"
+            class="width-200 btn btn-success btn-with-addon mr-auto mb-3 text-nowrap d-none d-md-block">
             <span class="btn-addon">
               <i class="btn-addon-icon fe fe-plus-circle"></i>
             </span>
             Add To Card
           </a>
-          <nz-tabset class="air-tabs-bordered">
+          <nz-tabset class="kit-tabs-bordered">
             <nz-tab nzTitle="Information"></nz-tab>
             <nz-tab nzTitle="Description"></nz-tab>
           </nz-tabset>
@@ -80,19 +71,13 @@
       </div>
     </div>
   </div>
-  <div class="air__utils__heading">
-    <h5>Related Products</h5>
+  <div class="cui__utils__heading">
+    <strong>Related Products</strong>
   </div>
   <div class="row">
     <div class="col-lg-4" *ngFor="let product of products">
-      <air-general-16
-        [isNew]="product.isNew"
-        [isFavorite]="product.isFavorite"
-        [image]="product.image"
-        [name]="product.name"
-        [price]="product.price"
-        [oldPrice]="product.oldPrice"
-      ></air-general-16>
+      <kit-general-16 [isNew]="product.isNew" [isFavorite]="product.isFavorite" [image]="product.image"
+        [name]="product.name" [price]="product.price" [oldPrice]="product.oldPrice"></kit-general-16>
     </div>
   </div>
 </div>
