--- a/src/app/components/layout/Topbar/topbar.component.html
+++ b/src/app/components/layout/Topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <div class="topbar">
   <div class="mr-4">
-    <i class="fe fe-star"></i>
+    <cui-topbar-fav-pages></cui-topbar-fav-pages>
   </div>
   <div class="mr-auto">
     <cui-topbar-search></cui-topbar-search>
