--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -1,3 +1,7 @@
+<cui-acl [roles]="['manager']">
+  <div>Hidden element for all roles expect 'manager' role</div>
+  <div>Next ACL component will redirect all roles except 'admin' role to 'dashboard/beta'</div>
+</cui-acl>
 <div class="cui__utils__heading mb-3">
   <strong class="text-uppercase font-size-16">Today Statistics</strong>
 </div>
