--- a/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
+++ b/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
@@ -1,10 +1,10 @@
-<nz-dropdown [nzTrigger]="'click'">
-  <a nz-dropdown class="dropdown">
-    <i class="icon fe fe-database"></i>
-    <span class="d-none d-xl-inline">
-      {{ 'topBar.projectManagement' | translate }}
-    </span>
-  </a>
+<a nz-dropdown class="dropdown" [nzDropdownMenu]="menu" [nzTrigger]="'click'">
+  <i class="icon fe fe-database"></i>
+  <span class="d-none d-xl-inline">
+    {{ 'topBar.projectManagement' | translate }}
+  </span>
+</a>
+<nz-dropdown-menu #menu="nzDropdownMenu">
   <ul nz-menu>
     <li nz-menu-group>
       <span title>Active</span>
@@ -36,4 +36,4 @@
       </a>
     </li>
   </ul>
-</nz-dropdown>
+</nz-dropdown-menu>
