--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,19 +1,28 @@
-<div class="auth">
-  <div class="pt-5 pb-5 d-flex align-items-end mt-auto">
-    <img src="assets/images/air-logo.png" alt="AIR UI Logo" />
-    <div class="air__utils__logo__text">
-      <div class="air__utils__logo__name text-uppercase text-dark font-size-21">
-        AIR UI
-      </div>
-      <div class="air__utils__logo__descr text-uppercase font-size-12 text-gray-6">
-        Admin template
-      </div>
-    </div>
+<div>
+  <div class="text-center mb-5">
+    <h1 class="mb-5">
+      <strong>Welcome to {{logo}}</strong>
+    </h1>
+    <p class="mb-4">
+      Pluggable enterprise-level application framework.
+      <br />
+      An excellent front-end solution for web applications built upon Ant Design.
+      <br />
+      Credentials for testing purposes - <strong>admin@mediatec.org</strong> /
+      <strong>cleanui</strong>
+    </p>
   </div>
-  <div class="pl-5 pr-5 pt-5 pb-5 bg-white container">
-    <div class="text-dark font-size-30 mb-2 text-center">Log In</div>
-    <div class="text-muted text-center mb-4">
-      Login and password - admin@mediatec.org / mediatec
+  <div class="card boxContainer">
+    <div class="text-dark font-size-24 mb-3">
+      <strong>Sign in to your account</strong>
+    </div>
+    <div class="mb-4">
+      <nz-radio-group [ngModel]="authProvider">
+        <label nz-radio nzValue="firebase">Firebase</label>
+        <label nz-radio nzValue="jwt" nzDisabled nzTooltipTitle="Soon" nzTooltipPlacement="top" nz-tooltip>JWT</label>
+        <label nz-radio nzValue="auth0" nzDisabled nzTooltipTitle="Soon" nzTooltipPlacement="top"
+          nz-tooltip>Auth0</label>
+      </nz-radio-group>
     </div>
     <form nz-form [nzLayout]="'vertical'" [formGroup]="form" (ngSubmit)="submitForm()" role="form">
       <nz-form-item>
@@ -28,43 +37,20 @@
       </nz-form-item>
       <nz-form-item>
         <nz-form-control>
-          <button nz-button nzType="primary" [nzSize]="'large'"
-            class="text-center btn btn-success w-100 font-weight-bold font-size-18">
-            Log In
+          <button nz-button nzType="primary" [nzSize]="'large'" class="text-center w-100">
+            <strong>Log In</strong>
           </button>
         </nz-form-control>
       </nz-form-item>
     </form>
-    <a href="javascript: void(0);"
-      class="font-weight-bold font-size-18 text-dark btn btn-outline-light w-100 mb-3 googleSign"
-      style="background-image: url('assets/images/icons/google-logo.svg')">
-      Log in with Google
+    <a routerLink="/auth/forgot-password" class="kit__utils__link font-size-16">
+      Forgot password?
     </a>
-    <div class="text-center">
-      <a routerLink="/system/forgot-password" class="text-blue font-weight-bold font-size-18">
-        Forgot password?
-      </a>
-    </div>
   </div>
-  <div class="text-center font-size-18 pt-4 mb-auto">
-    Don't have an account?
-    <a routerLink="/system/register" class="font-weight-bold text-blue text-underlined"><u>Sign Up</u></a>
-  </div>
-  <div class="mt-auto pb-5 pt-5">
-    <ul class="list-unstyled d-flex mb-2 flex-wrap justify-content-center footerNav">
-      <li>
-        <a href="javascript: void(0);">Terms of Use</a>
-      </li>
-      <li>
-        <a href="javascript: void(0);">Compliance</a>
-      </li>
-      <li>
-        <a href="javascript: void(0);">Support</a>
-      </li>
-      <li>
-        <a href="javascript: void(0);">Contacts</a>
-      </li>
-    </ul>
-    <div class="text-gray-4 text-center">© 2019 Mediatec. All rights reserved.</div>
+  <div class="text-center pt-2 mb-auto">
+    <span class="mr-2">Don't have an account?</span>
+    <a routerLink="/auth/register" class="kit__utils__link font-size-16">
+      Sign up
+    </a>
   </div>
 </div>
